# HmmSegmenter

./: CMakeLists.txt  README.md  main.cc
inc/: character.h  file_reader.h  hmm_model.h  string_util.h  tagger.h  training.h  utf8.h
src/: CMakeLists.txt  character.cc  file_reader.cc  hmm_model.cc  string_util.cc  string_util_unittest.cc  tagger.cc  training.cc  utf8.cc  utf8_unittest.cc
